--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "dev:debug": "node --inspect ./bin/server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "8.2.0",
     "eslint-config-prettier": "^8.1.0",
     "express": "4.17.1",
     "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "5.11.19",
     "morgan": "1.10.0",
+    "passport-jwt": "^4.0.0",
     "prettier": "^2.2.1"
   },
   "devDependencies": {
