--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "5.11.19",
+    "mongoose-paginate-v2": "1.3.16",
     "morgan": "1.10.0",
+    "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "prettier": "^2.2.1"
   },
