--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "1.25.1",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "8.2.0",
@@ -19,6 +20,7 @@
     "express-rate-limit": "5.2.6",
     "gravatar": "1.8.1",
     "helmet": "4.4.1",
+    "jimp": "^0.16.1",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "5.11.19",
