--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev:debug": "node --inspect ./bin/server.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "7.4.2",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "8.2.0",
