--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "joi": "^17.4.0",
     "mongoose": "5.11.19",
     "morgan": "1.10.0",
+    "nanoid": "3.1.22",
     "prettier": "^2.2.1"
   },
   "devDependencies": {
