--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-prettier": "^8.1.0",
     "express": "4.17.1",
     "joi": "^17.4.0",
+    "mailgen": "2.0.14",
     "mongoose": "5.11.19",
     "morgan": "1.10.0",
     "nanoid": "3.1.22",
